# dlight

./: .gitignore  CMakeLists.txt  README.md
msvc/: dlight.vcproj
src/: CMakeLists.txt  common.h  lightmap.cpp  lightmap.h  main.cpp  mapData.cpp  mapData.h  surfaces.cpp  surfaces.h  trace.cpp  trace.h  wad.cpp  wad.h
src/kexlib/: array.h  binFile.cpp  binFile.h  kstring.cpp  kstring.h  memHeap.cpp  memHeap.h
src/kexlib/math/: angle.cpp  bounds.cpp  mathlib.cpp  mathlib.h  matrix.cpp  plane.cpp  pluecker.cpp  quaternion.cpp  random.cpp  vector.cpp
